--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ SET(CMAKE_INSTALL_PREFIX "${INSTALL_PREFIX}" CACHE INTERNAL "Prefix prepended to
 
 # include directories
 INCLUDE_DIRECTORIES( ./core_lib/includes )
-
+INCLUDE_DIRECTORIES( ./ReleaseVectorDef/inc )
 
 set(SCT_PLOTS_INCLUDES ${PROJECT_SOURCE_DIR}/core_lib/includes)
 
@@ -42,7 +42,7 @@ LIST( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake )
 add_subdirectory(core_lib)
 
 
-
+add_subdirectory(ReleaseVectorDef)
 
 #######################################################
 # Print out system information useful for bug reports #
