updated shortcut classes so that they can be used in CINT

--- a/core_lib/CMakeLists.txt
+++ b/core_lib/CMakeLists.txt
@@ -24,6 +24,11 @@ ${PROJECT_SOURCE_DIR}/core_lib/includes/sct/lagacy/s_cuts.h
 ${PROJECT_SOURCE_DIR}/core_lib/includes/sct/lagacy/xml_input_file.hh 
 ${PROJECT_SOURCE_DIR}/core_lib/includes/sct/lagacy/Draw.h  
 ${PROJECT_SOURCE_DIR}/core_lib/includes/sct/xy_processors/xy_pro.hh
+${PROJECT_SOURCE_DIR}/core_lib/includes/sct/xy_processors/find_nearest.hh
+${PROJECT_SOURCE_DIR}/core_lib/includes/sct/xy_processors/find_nearest_strip.hh
+${PROJECT_SOURCE_DIR}/core_lib/includes/sct/predef/truehitExtractor.hh
+${PROJECT_SOURCE_DIR}/core_lib/includes/sct/predef/DUT_2_Track_correlator.hh
+${PROJECT_SOURCE_DIR}/core_lib/includes/sct/predef/fitterFile.hh
  )
 
 
