--- a/core_lib/CMakeLists.txt
+++ b/core_lib/CMakeLists.txt
@@ -55,7 +55,16 @@ ADD_CUSTOM_COMMAND(OUTPUT ${SCT_DICTIONARY}
       ARGS -f ${SCT_DICTIONARY} -c -p -I${MY_INCLUDE_DIRECTORIES} ${SCT_ROOT_HEADERS} ${LINKDEF_FILE} 
 )
 
-ADD_LIBRARY( ${PROJECT_NAME} SHARED ${SOURCES} ${SCT_DICTIONARY})
+ set(SCT_DICTIONARY_handle ${CMAKE_CURRENT_BINARY_DIR}/SCT_DICTIONARY_handle.cxx) 
+
+FILE(WRITE ${SCT_DICTIONARY_handle} "#ifndef _DEBUG \n")
+FILE(APPEND ${SCT_DICTIONARY_handle} "#include \"")
+FILE(APPEND ${SCT_DICTIONARY_handle} ${SCT_DICTIONARY})
+FILE(APPEND ${SCT_DICTIONARY_handle} "\" \n")
+FILE(APPEND ${SCT_DICTIONARY_handle} "#endif // !_DEBUG \n")
+
+
+ADD_LIBRARY( ${PROJECT_NAME} SHARED ${SOURCES} ${SCT_DICTIONARY_handle})
 
 INCLUDE_DIRECTORIES(${RAPIDXML_INCLUDE_DIRS})
 
