updated build system.
now the dict is always build on when the project is build.

--- a/core_lib/CMakeLists.txt
+++ b/core_lib/CMakeLists.txt
@@ -60,15 +60,17 @@ FILE(APPEND ${SCT_DICTIONARY_handle} ${SCT_DICTIONARY})
 FILE(APPEND ${SCT_DICTIONARY_handle} "\" \n")
 FILE(APPEND ${SCT_DICTIONARY_handle} "#endif // !_DEBUG \n")
 
-ADD_CUSTOM_COMMAND(OUTPUT ${SCT_DICTIONARY_handle}
-      COMMAND ${ROOT_CINT_EXECUTABLE}
-      ARGS -f ${SCT_DICTIONARY} -c -p -I${MY_INCLUDE_DIRECTORIES} ${SCT_ROOT_HEADERS} ${LINKDEF_FILE} 
-)
+
 
 ADD_LIBRARY( ${PROJECT_NAME} SHARED ${SOURCES} ${SCT_DICTIONARY_handle})
 
 INCLUDE_DIRECTORIES(${RAPIDXML_INCLUDE_DIRS})
 
+
+add_custom_command(TARGET  ${PROJECT_NAME} 
+      COMMAND ${ROOT_CINT_EXECUTABLE}
+      ARGS -f ${SCT_DICTIONARY} -c -p -I${MY_INCLUDE_DIRECTORIES} ${SCT_ROOT_HEADERS} ${LINKDEF_FILE} 
+)
 
 IF(LCIO_FOUND)
  
