add_custom_command seems not to work on linux

--- a/core_lib/CMakeLists.txt
+++ b/core_lib/CMakeLists.txt
@@ -67,10 +67,13 @@ ADD_LIBRARY( ${PROJECT_NAME} SHARED ${SOURCES} ${SCT_DICTIONARY_handle})
 INCLUDE_DIRECTORIES(${RAPIDXML_INCLUDE_DIRS})
 
 
-add_custom_command(TARGET  ${PROJECT_NAME} PRE_BUILD
-      COMMAND ${ROOT_CINT_EXECUTABLE}
-      ARGS -f ${SCT_DICTIONARY} -c -p -I${MY_INCLUDE_DIRECTORIES} ${SCT_ROOT_HEADERS} ${LINKDEF_FILE} 
+
+
+set(FAKE_TARGET fakeTarget)
+add_custom_target(fakeTarget
+   ${ROOT_CINT_EXECUTABLE} -f ${SCT_DICTIONARY} -c -p -I${MY_INCLUDE_DIRECTORIES} ${SCT_ROOT_HEADERS} ${LINKDEF_FILE} 
 )
+add_dependencies(${PROJECT_NAME} ${FAKE_TARGET})
 
 IF(LCIO_FOUND)
  
